2021-April-02 Struan Robertson

		* MesmerILT.cpp: Fix for ILT reference temperature incorrect read bug.

2021-March-28 Struan Robertson

		* ConditionsManager.cpp: Minor change to make grouping of data to be fit optional.

2021-February-14 Struan Robertson

		* ConditionsManager.cpp, Reaction.h, AssociationReaction.h, Collision.cpp: Added 
		check for association reactions that excess reactant concentration does not exceed
		bath gas concentration and print warning if it does.

2021-January-11 Struan Robertson

		* ConditionsManager.h/.cpp: Implementation of data grouping Chi^2 calculation.

2021-January-10 Struan Robertson

		* ConditionsManager.h/.cpp, System.h/.cpp: Restructuring of code in preparation for
		data grouping Chi^2 calculations.

2020-December-31 Struan Robertson

		* Documentation update.

2020-December-28 Struan Robertson

		* Documentation update.

2020-December-03 Struan Robertson

		* HinderedRotorQM1D.cpp: Allow for the exclusion of hindered rotors from a transition state.

		* pentyl_isomerization_restrainedTS.xml: Further updates of cyclic transition state test.

2020-November-29 Struan Robertson

		* gWellProperties.cpp: Corrections to Lennard-Jones implementation.

		* gDensityOfStates.cpp: Updated to store imaginary frequency if transition state parsed.

		* pentyl_isomerization_restrainedTS.xml: Update of cyclic transition state test to include 
		tunnelling.

2020-November-22 Struan Robertson

		* examples/Butan-1-ol: New tests for Lennard-Jones calculation methods and Biexponential 
		down model.

		* Documentation update.

2020-November-15 Struan Robertson

		* BiExponentialDown.cpp: Update of Biexponential energy transfer Kernel to account for 
		different bath gases.

2020-November-08 Struan Robertson

		* BiExponentialDown.cpp: Initial revision of Biexponential energy transfer Kernel.

		* gWellProperties.h/.cpp, gStructure.h/.cpp: Functional search to support Jasper 
		Lennard-Jones collision parameters.
